--- a/css/styles.css
+++ b/css/styles.css
@@ -604,9 +604,91 @@ display: flex;
         transform: translate(-50%, -50%);
 
         transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        padding: 24px;
 
 }
 
 .backdrop:not(.is-open) .modal {
     transform: translate(-50%, -50%) scale(1.5);
+}
+
+.modal-close-btn {
+    display: block;
+    margin-left: auto;
+    background-color: #e7e9fc;
+    border-radius: 100%;
+  
+    stroke-width: 1px;
+    border-color: rgba(0, 0, 0, 0.1);
+    
+    
+}
+
+.close {
+    color: #2e2f42;
+}
+
+
+.title {
+    font-weight: 500;
+        font-size: 16px;
+        line-height: 1.5;
+        letter-spacing: 0.02em;
+        text-align: center;
+        color: #2e2f42;
+        max-width: 360px;
+        margin-bottom: 16px;
+        margin-top: 24px;
+}
+
+.modal-field {
+margin-bottom: 8px;
+}
+
+.modal-input {
+    width: 100%;
+    border: 1px solid rgba(46, 47, 66, 0.4);
+        border-radius: 4px;
+        
+        height: 40px;
+        background-color: transparent;
+        padding-left: 38px;
+        padding-right: 38px;
+        color: #2e2f42;
+        outline: transparent;
+        
+}
+
+.modal-input:focus {
+    border-color: #4d5ae5;
+}
+
+.modal-input:focus + .modal-icon {
+    fill: #4d5ae5;
+}
+
+.modal-icon {
+    fill: transparent;
+    stroke: #2e2f42;
+    position: absolute;
+    left: 16px;
+    top: 50%;
+    transform: translateY(-50%);
+}
+
+.modal-field-wrap {
+    position: relative;
+}
+
+.modal-comment {
+    width: 100%;
+        border: 1px solid rgba(46, 47, 66, 0.4);
+        border-radius: 4px;
+    
+        height: 138px;
+        background-color: transparent;
+        padding: 8px 16px;
+        color: #2e2f42;
+        outline: transparent;
+        resize: none;
 }
