--- a/css/styles.css
+++ b/css/styles.css
@@ -661,14 +661,16 @@ margin-bottom: 8px;
 
 .modal-input:focus {
     border-color: #4d5ae5;
+    
 }
 
 .modal-input:focus + .modal-icon {
     fill: #4d5ae5;
+    
 }
 
 .modal-icon {
-    fill: transparent;
+    fill: #2e2f42;
     stroke: #2e2f42;
     position: absolute;
     left: 16px;
@@ -691,4 +693,105 @@ margin-bottom: 8px;
         color: #2e2f42;
         outline: transparent;
         resize: none;
+       
+            font-size: 12px;
+            line-height: 1.16667;
+            letter-spacing: 0.04em;
+            color: rgba(46, 47, 66, 0.4);
+}
+
+.modal-check {
+
+}
+
+.modal-check-text {
+    font-weight: 400;
+        font-size: 12px;
+        line-height: 1.16667;
+        letter-spacing: 0.04em;
+        color: #8e8f99;
+        display: flex;
+        align-items: center;
+        gap: 8px;
+        
+}
+
+.modal-check-text span {
+    display: block;
+    width: 16px;
+    height: 16px;
+    border-radius: 2px;
+        border: 1px solid rgba(46, 47, 66, 0.4);
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        fill: transparent;
+}
+
+.modal-check:checked + .modal-check-text span {
+    border: none;
+    background-color: #404bbf;
+    fill: #f4f4fd;
+    border-radius: 2px;
+}
+
+.text-label {
+    font-weight: 400;
+        font-size: 12px;
+        line-height: 1.16667;
+        letter-spacing: 0.04em;
+        color: #8e8f99;
+}
+
+.text-link {
+    line-height: 1.33333;
+        text-decoration: underline;
+        text-decoration-skip-ink: none;
+        color: #4d5ae5;
+}
+
+.footer-form {
+display: flex;
+align-items: center;
+justify-content: center;
+gap: 24px;
+
+
+} 
+
+.footer-input {
+    border: 1px solid #fff;
+        border-radius: 4px;
+        width: 264px;
+        height: 40px;
+        box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+        background: #2e2f42;
+        
+
+}
+
+.footer-btn {
+    border-radius: 4px;
+        padding: 8px 24px;
+        width: 165px;
+        height: 40px;
+        background-color: #4d5ae5;
+        border: none;
+        font-weight: 500;
+            font-size: 16px;
+            line-height: 1.5;
+            letter-spacing: 0.04em;
+            text-align: center;
+            color: #fff;
+           
+
+}
+
+.text-subscribe {
+    font-weight: 500;
+        font-size: 16px;
+        line-height: 1.5;
+        letter-spacing: 0.02em;
+        color: #fff;
+        
 }
