--- a/css/styles.css
+++ b/css/styles.css
@@ -623,6 +623,10 @@ display: flex;
     
     
 }
+.modal-close-btn:hover {
+    background-color: #404bbf;
+    fill: #fff;
+}
 
 .close {
     color: #2e2f42;
@@ -794,4 +798,27 @@ gap: 24px;
         letter-spacing: 0.02em;
         color: #fff;
         
+}
+
+.btn-send {
+    display: flex;
+    align-items: center;
+    justify-items: center;
+    margin: 0 auto;
+    
+        border: none;
+        flex-direction: column;
+        border-radius: 4px;
+        min-width: 169px;
+        padding: 16px 32px;
+        height: 56px;
+        transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+            background: #4d5ae5;
+            font-weight: 500;
+                font-size: 16px;
+                line-height: 1.5;
+                letter-spacing: 0.04em;
+                text-align: center;
+                color: #fff;
 }
