--- a/css/styles.css
+++ b/css/styles.css
@@ -604,7 +604,8 @@ display: flex;
         transform: translate(-50%, -50%);
 
         transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-        padding: 24px;
+        padding: 72px 24px 24px 24px;
+        
 
 }
 
@@ -613,19 +614,37 @@ display: flex;
 }
 
 .modal-close-btn {
-    display: block;
+    
     margin-left: auto;
     background-color: #e7e9fc;
     border-radius: 100%;
   
     stroke-width: 1px;
-    border-color: rgba(0, 0, 0, 0.1);
+    border: rgba(0, 0, 0, 0.1);
+    position: absolute;
+        top: 24px;
+        right: 24px;
+        height: 24px;
+        
+        display: flex;
+        align-items: center;
+    justify-content: center;
     
+    padding: 0;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
     
 }
 .modal-close-btn:hover {
     background-color: #404bbf;
     fill: #fff;
+    border: none;
+
+}
+
+.modal-close-btn:focus {
+    background-color: #404bbf;
+    fill: #ffffff
+        border: none;
 }
 
 .close {
@@ -646,7 +665,9 @@ display: flex;
 }
 
 .modal-field {
-margin-bottom: 8px;
+
+margin-bottom: 16px
+
 }
 
 .modal-input {
@@ -660,6 +681,7 @@ margin-bottom: 8px;
         padding-right: 38px;
         color: #2e2f42;
         outline: transparent;
+        transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
         
 }
 
@@ -680,6 +702,7 @@ margin-bottom: 8px;
     left: 16px;
     top: 50%;
     transform: translateY(-50%);
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-field-wrap {
@@ -691,7 +714,7 @@ margin-bottom: 8px;
         border: 1px solid rgba(46, 47, 66, 0.4);
         border-radius: 4px;
     
-        height: 138px;
+        
         background-color: transparent;
         padding: 8px 16px;
         color: #2e2f42;
@@ -699,9 +722,16 @@ margin-bottom: 8px;
         resize: none;
        
             font-size: 12px;
-            line-height: 1.16667;
+            
             letter-spacing: 0.04em;
             color: rgba(46, 47, 66, 0.4);
+            height: 120px;
+            line-height: 1.17;
+            transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+..modal-comment:focus {
+    border-color: #4D5AE5;
 }
 
 .modal-check {
@@ -711,13 +741,19 @@ margin-bottom: 8px;
 .modal-check-text {
     font-weight: 400;
         font-size: 12px;
-        line-height: 1.16667;
+        line-height: 1.17;
         letter-spacing: 0.04em;
         color: #8e8f99;
         display: flex;
         align-items: center;
         gap: 8px;
         
+}
+
+.primacy-span {
+    display: inline-flex;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    
 }
 
 .modal-check-text span {
@@ -742,9 +778,11 @@ margin-bottom: 8px;
 .text-label {
     font-weight: 400;
         font-size: 12px;
-        line-height: 1.16667;
+        display: block;
         letter-spacing: 0.04em;
         color: #8e8f99;
+        line-height: 1.17;
+        margin-bottom: 4px;
 }
 
 .text-link {
@@ -821,4 +859,5 @@ gap: 24px;
                 letter-spacing: 0.04em;
                 text-align: center;
                 color: #fff;
+                
 }
