--- a/css/styles.css
+++ b/css/styles.css
@@ -617,10 +617,10 @@ display: flex;
     
     margin-left: auto;
     background-color: #e7e9fc;
-    border-radius: 100%;
+    
   
     stroke-width: 1px;
-    border: rgba(0, 0, 0, 0.1);
+  
     position: absolute;
         top: 24px;
         right: 24px;
@@ -632,6 +632,9 @@ display: flex;
     
     padding: 0;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    width: 24px; 
+    border-radius: 50%;
+    border: 1px solid rgba(0, 0, 0, 0.1);
     
 }
 .modal-close-btn:hover {
@@ -753,7 +756,7 @@ margin-bottom: 16px
 .primacy-span {
     display: inline-flex;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    
+
 }
 
 .modal-check-text span {
