--- a/css/styles.css
+++ b/css/styles.css
@@ -646,8 +646,9 @@ display: flex;
 
 .modal-close-btn:focus {
     background-color: #404bbf;
-    fill: #ffffff
-        border: none;
+    fill: #ffffff;
+    border: none;
+
 }
 
 .close {
@@ -670,6 +671,7 @@ display: flex;
 .modal-field {
 
 margin-bottom: 16px
+margin-bottom: 8px;
 
 }
 
@@ -695,6 +697,8 @@ margin-bottom: 16px
 
 .modal-input:focus + .modal-icon {
     fill: #4d5ae5;
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    fill: #ffffff
     
 }
 
@@ -706,6 +710,7 @@ margin-bottom: 16px
     top: 50%;
     transform: translateY(-50%);
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    
 }
 
 .modal-field-wrap {
@@ -733,8 +738,9 @@ margin-bottom: 16px
             transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-..modal-comment:focus {
+.modal-comment:focus {
     border-color: #4D5AE5;
+    
 }
 
 .modal-check {
@@ -842,7 +848,7 @@ gap: 24px;
 }
 
 .btn-send {
-    display: flex;
+    
     align-items: center;
     justify-items: center;
     margin: 0 auto;
@@ -862,5 +868,6 @@ gap: 24px;
                 letter-spacing: 0.04em;
                 text-align: center;
                 color: #fff;
+                display: block;
                 
 }
