--- a/css/styles.css
+++ b/css/styles.css
@@ -653,6 +653,7 @@ display: flex;
 
 .close {
     color: #2e2f42;
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 
@@ -670,7 +671,7 @@ display: flex;
 
 .modal-field {
 
-margin-bottom: 16px
+
 margin-bottom: 8px;
 
 }
@@ -698,7 +699,7 @@ margin-bottom: 8px;
 .modal-input:focus + .modal-icon {
     fill: #4d5ae5;
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    fill: #ffffff
+    
     
 }
 
@@ -736,6 +737,10 @@ margin-bottom: 8px;
             height: 120px;
             line-height: 1.17;
             transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.comment {
+    margin-bottom: 16px
 }
 
 .modal-comment:focus {
@@ -869,5 +874,6 @@ gap: 24px;
                 text-align: center;
                 color: #fff;
                 display: block;
+                margin-bottom: 24px;
                 
 }
