--- a/css/styles.css
+++ b/css/styles.css
@@ -758,7 +758,7 @@ margin-bottom: 8px;
         line-height: 1.17;
         letter-spacing: 0.04em;
         color: #8e8f99;
-        display: flex;
+        display: inline-flex;
         align-items: center;
         gap: 8px;
         
