--- a/css/styles.css
+++ b/css/styles.css
@@ -764,7 +764,7 @@ margin-bottom: 8px;
         
 }
 
-.primacy-span {
+.privacy-span {
     display: inline-flex;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
