--- a/css/styles.css
+++ b/css/styles.css
@@ -829,7 +829,7 @@ gap: 24px;
 .footer-btn {
     border-radius: 4px;
         padding: 8px 24px;
-        width: 165px;
+        
         height: 40px;
         background-color: #4d5ae5;
         border: none;
@@ -839,7 +839,10 @@ gap: 24px;
             letter-spacing: 0.04em;
             text-align: center;
             color: #fff;
-           
+            min-width: 165px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
 
 }
 
@@ -849,6 +852,7 @@ gap: 24px;
         line-height: 1.5;
         letter-spacing: 0.02em;
         color: #fff;
+        margin-bottom: 16px;
         
 }
 
@@ -880,4 +884,8 @@ gap: 24px;
 
 .privacy {
     margin-bottom: 24px;
+}
+
+.telegram {
+    margin-left: 16px;
 }
