--- a/css/styles.css
+++ b/css/styles.css
@@ -840,71 +840,89 @@ margin-bottom: 8px;
                 
 }
 
-.privacy {
-    margin-bottom: 24px;
-}
 
-.footer-form {
+
+
+..footer-form {
     display: flex;
+    align-items: center;
+    justify-content: center;
     gap: 24px;
+
+
 }
 
-.footer-sub {
-    font-family: "Roboto", sans-serif;
+.footer-input {
+    border: 1px solid #fff;
+    border-radius: 4px;
+    width: 264px;
+    height: 40px;
+    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+    background: #2e2f42;
+
+
+}
+
+.footer-btn {
+    border-radius: 4px;
+    padding: 8px 24px;
+
+    height: 40px;
+    background-color: #4d5ae5;
+    border: none;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    text-align: center;
+    color: #fff;
+    min-width: 165px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+}
+
+.text-subscribe {
     font-weight: 500;
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
-    color: #ffffff;
-    margin-bottom: 16px;
-}
-
-.footer-input::placeholder {
-    font-size: 12px;
-    line-height: 2;
-    letter-spacing: 0.04em;
     color: #fff;
+    margin-bottom: 16px;
+
 }
 
-.footer-input {
-    width: 264px;
-    height: 40px;
-    border: 1px solid #fff;
-    background-color: transparent;
-    padding-left: 16px;
-    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
-    border-radius: 4px;
-    font-size: 12px;
-    line-height: 2;
-    letter-spacing: 0.04em;
-    color: #ffffff;
-}
+.btn-send {
 
-
-.footer-button {
-    min-width: 165px;
-    height: 40px;
-    display: flex;
-    justify-content: center;
     align-items: center;
-    font-family: "Roboto", sans-serif;
+    justify-items: center;
+    margin: 0 auto;
+
+    border: none;
+    flex-direction: column;
+    border-radius: 4px;
+    min-width: 169px;
+    padding: 16px 32px;
+    height: 56px;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+    background: #4d5ae5;
     font-weight: 500;
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.04em;
+    text-align: center;
     color: #fff;
-    background-color: #4d5ae5;
-    cursor: pointer;
-    border: none;
-    border-radius: 4px;
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    display: block;
+    margin-bottom: 24px;
+
 }
 
-.footer-button:hover,
-.footer-button:focus {
-    background-color: #404bbf;
+.privacy {
+    margin-bottom: 24px;
 }
 
-.icon-button {
+.telegram {
     margin-left: 16px;
 }
