--- a/css/styles.css
+++ b/css/styles.css
@@ -843,7 +843,7 @@ margin-bottom: 8px;
 
 
 
-..footer-form {
+.footer-form {
     display: flex;
     align-items: center;
     justify-content: center;
