--- a/css/styles.css
+++ b/css/styles.css
@@ -859,8 +859,18 @@ margin-bottom: 8px;
     height: 40px;
     box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
     background: #2e2f42;
+    background-color: transparent;
+    font-size: 12px;
+    line-height: 2;
+    letter-spacing: 0.04em;
+    padding-left: 16px;
+    color: #ffffff;
 
 
+}
+
+.footer-input::placeholder {
+    color #ffffff;
 }
 
 .footer-btn {
