--- a/css/styles.css
+++ b/css/styles.css
@@ -758,14 +758,13 @@ margin-bottom: 8px;
         line-height: 1.17;
         letter-spacing: 0.04em;
         color: #8e8f99;
-        display: inline-flex;
-        align-items: center;
-        gap: 8px;
+       
         
 }
 
 .privacy-span {
     display: inline-flex;
+    margin-right 8px;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 }
