--- a/css/styles.css
+++ b/css/styles.css
@@ -762,7 +762,7 @@ margin-bottom: 8px;
         
 }
 
-.privacy-span {
+.modal-check-span {
     display: inline-flex;
     margin-right 8px;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -937,6 +937,4 @@ margin-bottom: 8px;
     margin-left: 16px;
 }
 
-.class {
-    display: inline-flex;
 }
