--- a/css/styles.css
+++ b/css/styles.css
@@ -146,6 +146,7 @@ transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     background-color: #2e2f42;
     padding-top: 188px;
     padding-bottom: 188px;
+    margin: 0 auto;
 
     
 }
@@ -288,7 +289,7 @@ margin-bottom: 72px;
 }
 
 .team-list {
-    background-color: #FFFFFF;
+    background-color: #f4f4fd;;
 
     display: flex;
         flex-direction: row;
@@ -515,7 +516,7 @@ font-weight: 400;
 
 
 .div-media {
-    margin-right: 120px;
+    margin-right: 80px;
 
     }
 
@@ -896,6 +897,12 @@ margin-bottom: 8px;
 
 }
 
+.footer-btn:hover,
+.footer-btn:focus {
+    background-color: #404bbf;
+        transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
 .text-subscribe {
     font-weight: 500;
     font-size: 16px;
@@ -932,6 +939,12 @@ margin-bottom: 8px;
 
 }
 
+.btn-send:hover,
+.btn-send:focus {
+    background-color: #404bbf;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
 .privacy {
     margin-bottom: 24px;
 }
@@ -940,4 +953,5 @@ margin-bottom: 8px;
     margin-left: 16px;
 }
 
-}
+
+
